RESOLVED FIXED66881
[EFL] Fix build with ENABLE_GEOLOCATION.
https://bugs.webkit.org/show_bug.cgi?id=66881
Summary [EFL] Fix build with ENABLE_GEOLOCATION.
Raphael Kubo da Costa (:rakuco)
Reported 2011-08-24 12:49:01 PDT
[EFL] Fix build with ENABLE_GEOLOCATION.
Attachments
Patch (1.59 KB, patch)
2011-08-24 12:50 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-08-24 12:50:53 PDT
Patrick R. Gansterer
Comment 2 2011-08-24 15:45:13 PDT
Raphael Kubo da Costa (:rakuco)
Comment 3 2011-08-25 06:48:34 PDT
Comment on attachment 105049 [details] Patch Cleaning flags, patch committed.
Note You need to log in before you can comment on or make changes to this bug.