[EFL] Fix build with ENABLE_GEOLOCATION. https://bugs.webkit.org/show_bug.cgi?id=66881

Use adoptPtr() to create a new GeolocationService instance, otherwise
the build will fail when creating the PassOwnPtr object.

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-08-24

* platform/efl/GeolocationServiceEfl.cpp:
(WebCore::GeolocationServiceEfl::create):

Canonical link: https://commits.webkit.org/82696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93746 268f45cc-cd09-0410-ab3c-d52691b4dbfc