Source/WebCore/platform/efl/GeolocationServiceEfl.cpp
@@ -32,7 +32,7 @@ GeolocationService::FactoryFunction* GeolocationService::s_factoryFunction = &Ge
 
 PassOwnPtr<GeolocationService> GeolocationServiceEfl::create(GeolocationServiceClient* client)
 {
-    return new GeolocationServiceEfl(client);
+    return adoptPtr(new GeolocationServiceEfl(client));
 }
 
 GeolocationServiceEfl::GeolocationServiceEfl(GeolocationServiceClient* client)
